<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity" >

    <TextView
        android:id="@+id/main_title4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="My Cookbook"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/border4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/second_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/second_calorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/variant"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/howto"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/second_ing"
                android:layout_width="match_parent"
                android:layout_height="169dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#919191"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/change"
                android:textColor="@color/mainColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/second_et"
                android:layout_width="330dp"
                android:layout_height="38dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/second_btn"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/second_btn"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18dp"
                android:textStyle="normal"
                app:cornerRadius="5dp"
                app:strokeColor="#434343"
                app:strokeWidth="1dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>